# arke

client/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json  settings.gradle
client/android/app/src/main/res/values/: strings.xml
client/app/: build.gradle
client/app/src/androidTest/java/com/codelog/arke/: ExampleInstrumentedTest.kt
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/codelog/arke/: HomeActivity.kt  MainActivity.kt
client/app/src/main/java/com/codelog/arke/api/: User.kt
client/app/src/main/java/com/codelog/arke/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
client/app/src/main/java/com/codelog/arke/ui/home/: ChatModel.kt  HomeFragment.kt  HomeViewModel.kt
client/app/src/main/java/com/codelog/arke/ui/slideshow/: SlideshowFragment.kt  SlideshowViewModel.kt
client/app/src/main/java/com/codelog/arke/ui/theme/: Color.kt  Theme.kt  Type.kt
client/app/src/main/res/layout/: activity_home.xml  app_bar_main.xml  chat_layout.xml  fragment_home.xml
client/app/src/main/res/navigation/: mobile_navigation.xml
client/app/src/main/res/raw/: cert.pem
client/app/src/main/res/values/: strings.xml  themes.xml
client/app/src/main/res/values-night/: themes.xml
client/app/src/test/java/com/codelog/arke/: ExampleUnitTest.kt
client/gradle/wrapper/: gradle-wrapper.properties
client/src/views/: HomePage.vue
server/: Cargo.toml  keystore.jks  privateKey.pem
server/src/: main.rs  user.rs
