[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
fern = "0.6.2"
log = "0.4.19"
humantime = "2.1.0"
dotenvy = "0.15.7"
